# csecp256k1

./: CHANGELOG  README.md  csecp256k1.cabal  flake.nix  haskell-secp256k1.cabal  ppad-csecp256k1.cabal
bench/: Main.hs
lib/Crypto/: Secp256k1.hs
lib/Crypto/Curve/: Secp256k1.hs
secp256k1-sys/: flake.nix  secp256k1-sys.cabal  vendor-libsecp.sh
secp256k1-sys/depend/: secp256k1-HEAD-revision.txt  secp256k1.h.patch
secp256k1-sys/depend/secp256k1/: CONTRIBUTING.md  Makefile.am
secp256k1-sys/depend/secp256k1/cmake/: TryAppendCFlags.cmake
secp256k1-sys/depend/secp256k1/contrib/: lax_der_parsing.c  lax_der_parsing.h  lax_der_privatekey_parsing.c  lax_der_privatekey_parsing.h
secp256k1-sys/depend/secp256k1/doc/: ellswift.md
secp256k1-sys/depend/secp256k1/examples/: ecdh.c  ecdsa.c  schnorr.c
secp256k1-sys/depend/secp256k1/include/: secp256k1.h  secp256k1_ecdh.h  secp256k1_ellswift.h  secp256k1_extrakeys.h  secp256k1_preallocated.h  secp256k1_recovery.h  secp256k1_schnorrsig.h
secp256k1-sys/depend/secp256k1/sage/: gen_exhaustive_groups.sage  gen_split_lambda_constants.sage  prove_group_implementations.sage
secp256k1-sys/depend/secp256k1/src/: CMakeLists.txt  assumptions.h  bench.c  bench_ecmult.c  bench_internal.c  ctime_tests.c  ecdsa.h  ecdsa_impl.h  eckey.h  eckey_impl.h  ecmult.h  ecmult_compute_table.h  ecmult_compute_table_impl.h  ecmult_const.h  ecmult_const_impl.h  ecmult_gen.h  ecmult_gen_compute_table.h  ecmult_gen_compute_table_impl.h  ecmult_gen_impl.h  ecmult_impl.h  field.h  field_10x26.h  field_10x26_impl.h  field_5x52.h  field_5x52_impl.h  field_5x52_int128_impl.h  field_impl.h  group.h  group_impl.h  hash.h  hash_impl.h  int128.h  int128_native.h  int128_native_impl.h  int128_struct.h  int128_struct_impl.h  modinv32.h  modinv32_impl.h  modinv64.h  modinv64_impl.h  (+24 more)
secp256k1-sys/depend/secp256k1/src/asm/: field_10x26_arm.s
secp256k1-sys/depend/secp256k1/src/modules/ecdh/: Makefile.am.include  bench_impl.h  main_impl.h  tests_impl.h
secp256k1-sys/depend/secp256k1/src/modules/ellswift/: Makefile.am.include  bench_impl.h  main_impl.h  tests_exhaustive_impl.h  tests_impl.h
secp256k1-sys/depend/secp256k1/src/modules/extrakeys/: Makefile.am.include  main_impl.h  tests_exhaustive_impl.h  tests_impl.h
secp256k1-sys/depend/secp256k1/src/modules/recovery/: Makefile.am.include  bench_impl.h  main_impl.h  tests_exhaustive_impl.h  tests_impl.h
secp256k1-sys/depend/secp256k1/src/modules/schnorrsig/: Makefile.am.include  bench_impl.h  main_impl.h  tests_exhaustive_impl.h  tests_impl.h
secp256k1-sys/depend/secp256k1/src/wycheproof/: WYCHEPROOF_COPYING
secp256k1-sys/lib/Crypto/Curve/Secp256k1/: Internal.hs
secp256k1-sys/lib/Crypto/Secp256k1/: Internal.hs
secp256k1-sys/test/: Main.hs
test/: BIP340.hs  Main.hs  Wycheproof.hs
