cabal-version:      3.0
name:               ppad-csecp256k1
version:            0.1.0
synopsis:           secp256k1 bindings
description:        secp256k1 bindings.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple

library secp256k1-sys
  default-language: Haskell2010
  hs-source-dirs:   secp256k1-sys/lib

  exposed-modules:
      Crypto.Secp256k1.Internal

  build-depends:
      base
    , bytestring

  ghc-options:
      -Wall

  include-dirs:
      secp256k1-sys/depend/secp256k1/include/

  includes:
      secp256k1.h
    , secp256k1_ecdh.h
    , secp256k1_extrakeys.h
    , secp256k1_schnorrsig.h

  c-sources:
      secp256k1-sys/depend/secp256k1/src/precomputed_ecmult_gen.c
    , secp256k1-sys/depend/secp256k1/src/precomputed_ecmult.c
    , secp256k1-sys/depend/secp256k1/src/secp256k1.c

  cc-options:
    -DENABLE_MODULE_ECDH
    -DENABLE_MODULE_EXTRAKEYS
    -DENABLE_MODULE_SCHNORRSIG

test-suite secp256k1-sys-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      secp256k1-sys/test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall

  build-depends:
      base
    , bytestring
    , entropy
    , secp256k1-sys
    , tasty
    , tasty-hunit

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
  build-depends:
      base
    , secp256k1-sys

