cabal-version:      3.0
name:               ppad-csecp256k1
version:            0.1.0
synopsis:           bitcoin-core/secp256k1 bindings
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == { 9.6.4, 9.4.8 }
description:
  Bindings to bitcoin-core/secp256k1, which provides digital
  signatures and other cryptographic primitives on the secp256k1
  elliptic curve.

  This library exposes a minimal subset of functionality, primarily
  supporting ECDSA/Schnorr signatures and ECDH secret computation.

source-repository head
  type:     git
  location: git.ppad.tech/csecp256k1.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Crypto.Secp256k1
  build-depends:
      base
    , bytestring
    , secp256k1-sys

library secp256k1-sys
  default-language: Haskell2010
  hs-source-dirs:   secp256k1-sys/lib

  exposed-modules:
      Crypto.Secp256k1.Internal

  build-depends:
      base
    , bytestring

  ghc-options:
      -Wall

  include-dirs:
      secp256k1-sys/depend/secp256k1/include/

  includes:
      secp256k1.h
    , secp256k1_ecdh.h
    , secp256k1_extrakeys.h
    , secp256k1_schnorrsig.h

  c-sources:
      secp256k1-sys/depend/secp256k1/src/precomputed_ecmult_gen.c
    , secp256k1-sys/depend/secp256k1/src/precomputed_ecmult.c
    , secp256k1-sys/depend/secp256k1/src/secp256k1.c

  cc-options:
    -DENABLE_MODULE_ECDH
    -DENABLE_MODULE_EXTRAKEYS
    -DENABLE_MODULE_SCHNORRSIG

test-suite secp256k1-sys-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      secp256k1-sys/test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall

  build-depends:
      base
    , bytestring
    , entropy
    , secp256k1-sys
    , tasty
    , tasty-hunit

test-suite csecp256k1-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall

  build-depends:
      base
    , bytestring
    , ppad-csecp256k1
    , tasty
    , tasty-hunit

benchmark csecp256k1-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , criterion
    , deepseq
    , ppad-csecp256k1

