cabal-version:      3.0
name:               secp256k1-sys
version:            0.1.0
synopsis:           Internal secp256k1 bindings
description:        Internal secp256k1 bindings.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@jtobin.io
category:           Cryptography
build-type:         Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   lib
  exposed-modules:
      Crypto.Secp256k1.Internal
  build-depends:
      base ^>= 4.18.2.0

  include-dirs:
      depend/secp256k1/
    , depend/secp256k1/include/
    , depend/secp256k1/contrib/
    , depend/secp256k1/src/

  c-sources:
      depend/secp256k1/contrib/lax_der_parsing.c
    , depend/secp256k1/src/precomputed_ecmult_gen.c
    , depend/secp256k1/src/precomputed_ecmult.c
    , depend/secp256k1/src/secp256k1.c

  cc-options:
    -D "SECP256k1_API="
    -D "ENABLE_MODULE_ECDH=1"
    -D "ENABLE_MODULE_SCHNORRSIG=1"
    -D "ENABLE_MODULE_EXTRAKEYS=1"
    -D "ENABLE_MODULE_ELLSWIFT=1"

