cabal-version:      3.0
name:               secp256k1-sys
version:            0.1.0
synopsis:           Internal secp256k1 bindings
description:        Internal secp256k1 bindings.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@jtobin.io
category:           Cryptography
build-type:         Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   lib
  exposed-modules:
      Crypto.Secp256k1.Internal
  build-depends:
      base
    , bytestring

  ghc-options:
    -optc -Wno-implicit-function-declaration

  include-dirs:
      depend/secp256k1/include/

  c-sources:
      depend/secp256k1/src/precomputed_ecmult_gen.c
    , depend/secp256k1/src/precomputed_ecmult.c
    , depend/secp256k1/src/secp256k1.c

  cpp-options:
    -DENABLE_MODULE_SCHNORRSIG
    -DENABLE_MODULE_EXTRAKEYS
    -DENABLE_MODULE_ELLSWIFT

