cabal-version:      3.0
name:               secp256k1-sys
version:            0.1.0
synopsis:           Internal secp256k1 bindings
description:        Internal secp256k1 bindings.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple

library
  default-language: Haskell2010
  hs-source-dirs:   lib

  exposed-modules:
      Crypto.Secp256k1.Internal

  build-depends:
      base
    , bytestring

  ghc-options:
      -Wall -optc -Wno-implicit-function-declaration

  include-dirs:
      depend/secp256k1/include/

  includes:
      secp256k1.h
    , secp256k1_ecdh.h
    , secp256k1_extrakeys.h
    , secp256k1_schnorrsig.h

  c-sources:
      depend/secp256k1/src/precomputed_ecmult_gen.c
    , depend/secp256k1/src/precomputed_ecmult.c
    , depend/secp256k1/src/secp256k1.c

  cc-options:
    -DENABLE_MODULE_ECDH
    -DENABLE_MODULE_EXTRAKEYS
    -DENABLE_MODULE_SCHNORRSIG

test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall

  build-depends:
      base
    , bytestring
    , entropy
    , secp256k1-sys
    , tasty
    , tasty-hunit

